--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -7,11 +7,11 @@ $white: #FFFFFF;
 }
 
 .header .wrapper {
-  width: 1020px;
+  max-width: 1020px;
   height: 95px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 40px 125px 440px 375px 1fr;
+  grid-template-columns: 40px 125px 1fr 375px 40px;
   grid-template-rows: 1fr 1fr 40px;
 }
 
